custome checkbox using ::before and ::after

--- a/button.html
+++ b/button.html
@@ -10,5 +10,9 @@
   <body>
     <a href="#" class="btn">Hover Me</a>
     <div class="spinner"></div>
+    <div class="box">
+      <input type="checkbox" class="toggle" id="toggle" />
+      <label for="toggle">custome checkbox</label>
+    </div>
   </body>
 </html>
